# Fin

./: app.py  pyproject.toml
notebooks/: Fin_.ipynb  OG_Fin_.ipynb  requirements.py
src/fin_lab/: Agents.py  Aggregation.py  Categorization.py  Normalization.py  User.py  __init__.py  ask.py  config.py  f_core.py  natural_language_query_agent.py  pdf_func.py  registry.py
