[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finlab"
version = "0.1.0"
description = "Finance utilities and notebook workflows"
authors = [
    { name="David Lopez" }
]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
